log
Sun 10 Sep 2023 01:37:36 AM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   55 |   map->bucket[indice] = par;
      |        ^~~~~~
      |        buckets
hashmap.c:56:16: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |   map->current = index;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
6b7bbe0
Sun 10 Sep 2023 01:39:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:16: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |   map->current = index;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
515e5e6
Sun 10 Sep 2023 01:39:29 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
859818a
Sun 10 Sep 2023 01:43:52 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|5
total_score: 20/70
4f6ffdd
Sun 10 Sep 2023 01:51:24 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:78:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   78 |   MAP->buckets = (Pair *) malloc(sizeof(Pair ) * capacity);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9ba7d18
Sun 10 Sep 2023 01:51:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
3bdf7d7
